--- a/todo.txt
+++ b/todo.txt
@@ -39,7 +39,10 @@ webtokens
 ??
 go for full unit testing
 
+
+
 future, make a pwa/app. For now just api and barebones website
 
+- use transactions and connection pooling for mysql
 
 
