--- a/todo.txt
+++ b/todo.txt
@@ -44,5 +44,5 @@ go for full unit testing
 future, make a pwa/app. For now just api and barebones website
 
 - use transactions and connection pooling for mysql
-
+- change user params to user query so its properly done!
 
